loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:11: error: ':' expected but ')' found.
def circle(n) {
            ^LoopCourse:18: error: identifier expected but '}' found.
	}
        ^